# fortiauth-user-provisioning

./: .gitignore  CLAUDE.md  LICENSE  README.md  fauth.spec  pyproject.toml
.claude/: settings.json
.github/workflows/: release.yml  test.yml
docs/: DESIGN.md
src/fauth/: __main__.py  audit.py  cli.py  client.py  config.py  lookup.py  token_pool.py
src/fauth/commands/: group_create.py  group_delete.py  groups.py  token_info.py  tokens.py  user_add.py  user_addgroup.py  user_delete.py  user_disable.py  user_disable_mfa.py  user_enable.py  user_enable_mfa.py  user_import_csv.py  user_list.py  user_retoken.py  user_rmgroup.py  user_search.py  user_show.py  user_update.py
tests/: conftest.py  test_client.py  test_config.py  test_group_lifecycle.py  test_lookup.py  test_token_info.py  test_token_pool.py  test_user_add.py  test_user_disable_mfa.py  test_user_enable.py  test_user_enable_mfa.py  test_user_import_csv.py  test_user_list_filters.py  test_user_mutations.py  test_user_retoken.py  test_user_search.py  test_user_update.py
