[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fauth"
version = "0.1.0"
description = "CLI for FortiAuthenticator user provisioning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Joakim Nordin" }]
license = { text = "Proprietary" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "keyring>=24.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
fauth = "fauth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
